// Vitest Snapshot v1

exports[`jss pieces to be tested > invalid.tsx 1`] = `
"import styled from \\"@emotion/styled\\";

const Title = styled.h2\`
  margin: 0 0 1rem;
  font-size: 1.5rem;
  width: calc(5% - 10em);
\`;

function Invalid() {
  return (
    <>
      <Title>Learn React</Title>
      <div style={{widht: \\"22px\\",top: 0}} />
    </>
  );
}

export default Invalid;
"
`;

exports[`jss pieces to be tested > valid.tsx 1`] = `
"import styled from \\"@emotion/styled\\";

const Title = styled.h2\`width: calc(5% - 10em);
  margin: 0 0 1rem;
  font-size: 1.5rem;
\`;

function Valid() {
  return (
    <>
      <Title>Learn React</Title>
      <div style={{ width: \\"22px\\", top: 0 }} />
    </>
  );
}

export default Valid;
"
`;
